--- a/package.json
+++ b/package.json
@@ -14,7 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.2",
+    "chai": "^4.2.0",
     "dotenv": "^8.2.0",
-    "moment": "^2.27.0"
+    "mocha": "^8.0.1",
+    "moment": "^2.27.0",
+    "nyc": "^15.1.0",
+    "serverless": "^1.76.1",
+    "sinon": "^9.0.2"
+  },
+  "devDependencies": {
+    "serverless-dotenv-plugin": "^3.0.0",
+    "serverless-offline": "^6.5.0"
   }
 }
