--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "demo-integration",
-  "version": "1.0.0",
-  "description": "demo",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "demo-integration"
-  },
-  "author": "mauxiandr",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "chai": "^4.2.0",
-    "dotenv": "^8.2.0",
-    "mocha": "^8.0.1",
-    "moment": "^2.27.0",
-    "nyc": "^15.1.0",
-    "serverless": "^1.76.1",
-    "sinon": "^9.0.2"
-  },
-  "devDependencies": {
-    "serverless-dotenv-plugin": "^3.0.0",
-    "serverless-offline": "^6.5.0"
-  }
+	"name": "demo-integration",
+	"version": "1.0.0",
+	"description": "demo",
+	"main": "index.js",
+	"scripts": {
+		"test": "mocha --recursive './spec/*.spec.js'",
+		"coverage": "nyc --reporter=html npm run test"
+	},
+	"repository": {
+		"type": "git",
+		"url": "demo-integration"
+	},
+	"author": "mauxiandr",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^0.19.2",
+		"chai": "^4.2.0",
+		"dotenv": "^8.2.0",
+		"mocha": "^8.0.1",
+		"mock-fs": "^4.12.0",
+		"moment": "^2.27.0",
+		"nyc": "^15.1.0",
+		"serverless": "^1.76.1",
+		"sinon": "^9.0.2"
+	},
+	"devDependencies": {
+		"serverless-dotenv-plugin": "^3.0.0",
+		"serverless-offline": "^6.5.0"
+	},
+	"nyc": {
+		"all": true,
+		"include": [
+			"*.{js,jsx}"
+		],
+		"exclude": [
+			"**/*.spec.js"
+		]
+	}
 }
